Fixed to much white space in the Story Editor on the Modern Curve Theme (feature request #0001603) Also the Denim and the Professional CSS.

--- a/public_html/layout/denim/css_ltr/style.css
+++ b/public_html/layout/denim/css_ltr/style.css
@@ -2683,6 +2683,13 @@ b.status_black {
   border-bottom: none;
 }
 
+/* Story Stats */
+.story_stats {
+  display: inline-block;
+  float: left; /* rtl */
+  margin-right: 2em; /* rtl */
+}
+
 /*--------------------------------------
   Topic Editor
 --------------------------------------*/
