--- a/public_html/layout/professional_css/css/admin/story.css
+++ b/public_html/layout/professional_css/css/admin/story.css
@@ -139,3 +139,10 @@ div#preview div.storytext {
   padding: 0;
   border-bottom: none;
 }
+
+/* Story Stats */
+span.story_stats {
+  display: inline-block;
+  float: left;
+  margin-right: 2em;
+}
